fix url crash